# MatchServer

./: .gitignore  MatchServer.sln
MatchServer/: CMakeLists.txt  MatchServer.cpp  MatchServer.vcxproj  MatchServer.vcxproj.filters  MessageInterpreter.cpp  MessageInterpreter.h  PortChecker.cpp  PortChecker.h  webSocketServer.cpp  webSocketServer.h  webSocketSession.cpp  webSocketSession.h
